--- a/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
@@ -1,11 +1,13 @@
-Hello {{ name }}!
+{#
 <?php
 $title = 'My solmization strings';
 $this->headTitle($title);
 ?>
+#}
 <div id="head">
-    <h1><?php echo $this->escapeHtml($title); ?></h1>
+    <h1>{#<?php echo $this->escapeHtml($title); ?>#}</h1>
     <div id="login">
+        {#
         <?php
         $user = $this->identity();
         if ($user) {
@@ -23,6 +25,7 @@ $this->headTitle($title);
             echo $this->form()->closeTag();
         }
         ?>
+        #}
     </div>
 </div>
 <div id="upper">
@@ -76,59 +79,51 @@ $this->headTitle($title);
 </div>
 <p class="categories-top">
     <strong>Categories</strong>
-    <?php if ($user) : ?>
+    {#<?php if ($user) : ?>#}
         - <a href="<?php
 //    echo $this->url('solmik', array('controller' => 'solmik-category', 'action' => 'create')); 
         echo $this->url('solmik-category', array('action' => 'create'));
         ?>">Add new Category</a>
-         <?php endif ?>
+         {#<?php endif ?>#}
 </p>
 <table class="table" id="solmi-strings">
-    <?php foreach ($categories as $cKey => $category) : ?>
+    {% for cKey, category in categories %}
         <tr>
-            <td><?php echo $this->escapeHtml($category->getName()); ?>
-                <?php if ($user) : ?>
+            <td>{{ category.getName() }}
+                {#<?php if ($user) : ?>#}
                     <a href="<?php echo $this->url('solmik-category', array('action' => 'edit', 'id' => $category->getId()));
                     ?>">Edit</a> - 
                     <a href="<?php echo $this->url('solmik-category', array('action' => 'delete', 'id' => $category->getId()));
                     ?>">Delete</a> - 
                     <a href="<?php echo $this->url('solmik-string', array('action' => 'create', 'id' => $category->getId()));
                     ?>">Add string</a>
-                   <?php endif ?>
+                   {#<?php endif ?>#}
             </td>
         </tr>
         <tr>
             <td>
-                <?php if ($stringForms[$cKey]): ?> 
+                {% if stringForms[cKey] %}
                     <ul>
-                        <?php
-                        $solmistrings = $category->getSolmistrings();
-                        for ($j = 0; $j < count($stringForms[$cKey]); $j++) :
-                            ?> 
-                            <li><?php
-                                $stringForm = $stringForms[$cKey][$j];
-//                                $stringForm->setAttribute('action', $this->url(
-//                                                'solmik-string', array(
-//                                            'action' => 'edit',
-//                                            'id' => $this->id,
-//                                                )
-//                                ));
-                                $stringForm->prepare();
+                        {% set solmistrings = category.getSolmistrings() %}
+                        {% for sF in stringForms[cKey] %}
+                            {% set j = loop.index0 %}
+                            <li>
+                                {% set stringForm = stringForms[cKey][j] %}
 
-                                echo $this->form()->openTag($stringForm);
-                                echo $this->formCollection($stringForm);
-                                echo $this->form()->closeTag();
-                                ?> 
-                                <?php if ($user) : ?>
-                                    <a href="<?php echo $this->url('solmik-string', array('action' => 'edit', 'id' => $solmistrings[$j]->getId())); ?>">Edit</a> - 
-                                    <a href="<?php echo $this->url('solmik-string', array('action' => 'delete', 'id' => $solmistrings[$j]->getId())); ?>">Delete</a>
-                                    - <?php endif ?>
-                                <?php echo $solmistrings[$j]->getName(); ?>
+                                {{ form_start(stringForm) }}
+                                {{ form_widget(stringForm) }}
+                                {{ form_end(stringForm) }}
+                                {#<?php if ($user) : ?>#}
+                                    <a href="<?php echo $this->url('solmik-string', array('action' => 'edit', 'id' => solmistrings[j]->getId())); ?>">Edit</a> - 
+                                    <a href="<?php echo $this->url('solmik-string', array('action' => 'delete', 'id' => solmistrings[j]->getId())); ?>">Delete</a>
+                                    - 
+                                {#<?php endif ?>#}
+                                {{ solmistrings[j].getName() }}
                             </li>
-                        <?php endfor; ?> 
+                        {% endfor %}
                     </ul>
-                <?php endif; ?> 
+                {% endif %}
             </td>
         </tr>
-    <?php endforeach; ?>
+    {% endfor %}
 </table>
