--- a/src/Mkox/SolmikBundle/Resources/views/Solmistring/delete.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmistring/delete.html.twig
@@ -1,11 +1,15 @@
-
+{% extends 'MkoxSolmikBundle::layout.html.twig' %}
 {% set title = 'Delete solmization string' %}
-<h1>{{ title }}</h1>
+{% block title %}{{ title }}{% endblock %}
 
-<form action="{{ path('solmik-string-delete', {'id' : solmistring.getId()}) }}" method="post">
-    <div>
-        <input type="hidden" name="id" value="{{ id }}" />
-        <input type="submit" name="del" value="Yes" />
-        <input type="submit" name="del" value="No" />
-    </div>
-</form>
+{% block body %}
+    <h1>{{ title }}</h1>
+
+    <form action="{{ path('solmik-string-delete', {'id' : solmistring.getId()}) }}" method="post">
+        <div>
+            <input type="hidden" name="id" value="{{ id }}" />
+            <input type="submit" name="del" value="Yes" />
+            <input type="submit" name="del" value="No" />
+        </div>
+    </form>
+{% endblock %}
