--- a/src/Mkox/SolmikBundle/Resources/views/layout.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/layout.html.twig
@@ -11,6 +11,8 @@
     </head>
     <body>
     {% block body %}{% endblock %}
-    {% block javascripts %}{% endblock %}
+    {% block javascripts %}
+        <script src="{{ asset(bPath ~ 'js/libs/require/require-2.1.15.js') }}" type="text/javascript" data-main="{{ asset(bPath ~ 'dist/js/config') }}"></script>
+    {% endblock %}
     </body>
 </html>
