to have the same height for div#staff and staff image

--- a/src/Mkox/SolmikBundle/Resources/public/css/main.css
+++ b/src/Mkox/SolmikBundle/Resources/public/css/main.css
@@ -110,6 +110,7 @@ h2 {/*better solutin needed*/
 div#staff {
     margin-top: 10px;
     position: relative;
+    height: 232.65012px;
 }
 div#staff .note {
     width: 35px;
