--- a/src/Mkox/SolmikBundle/Resources/views/layout.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
     {% set bPath = 'bundles/mkoxsolmik/' %} {# bundle path in web folder #}
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset(bPath ~ 'dist/css/main.css') }}" rel="stylesheet" />
