--- a/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
@@ -31,7 +31,7 @@
 
     <section id="staff-outer">
         <figure id="staff">
-            <img src="{{ asset(bPath ~ 'images/staff.svg') }}" alt="staff">
+            <img id="staff-image" src="{{ asset(bPath ~ 'images/staff.svg') }}" alt="staff">
         </figure>
         <div id="message-staff"></div>
         <div class="used-string"></div>
