--- a/src/Mkox/SolmikBundle/Resources/views/Category/edit.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Category/edit.html.twig
@@ -2,7 +2,7 @@
 {% set title = 'Edit solmization string' %}
 {% block title %}{{ title }}{% endblock %}
 
-{% block body %}
+{% block main %}
     <h1>{{ title }}</h1>
 
     {{ form_start(form) }}
