--- a/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
@@ -110,16 +110,21 @@
                                     <button type="button" id="solmik_solmistring_for_list_save" name="solmik_solmistring_for_list[save]" class="go">Go</button>
                                 </div>
                                 <div>
-                                    <select name="solmik_solmistring_for_list[soundKey]" id="solmik_solmistring_for_list_soundKey"
+                                    <select name="solmik_solmistring_for_list[soundKey]" id="solmik_solmistring_for_list_soundKey" 
+                                            class="sound-keys"
                                             ng-options="option.name for option in soundKeysArray track by option.name"
                                             get-sound-key ng-model="solmistring.soundKey"
                                             >
                                     </select>
                                 </div>
                                 <div>
-                                    <select  id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
-                                        ng-model="solmistring.baseScale" ng-options="n for n in [] | range:1:9">
-                                    </select>
+                                    {#<select  id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
+                                             ng-model="solmistring.baseScale" ng-options="n for n in [] | range:1:9">
+                                    </select>#}
+                                    <input type="number" name="input" ng-model="solmistring.baseScale"
+                                           min="1" max="9" required
+                                           id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
+                                           >
                                 </div>
                                 <div>
                                     <input type="text" id="solmik_solmistring_for_list_string" name="solmik_solmistring_for_list[string]" required="required" value="{% verbatim %}{{ solmistring.string}}{% endverbatim %}" />
