also in angularJS forms: Some links only visible when logged in

--- a/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
@@ -159,6 +159,9 @@
                 </td>
             </tr>
         </table>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <div id="solmik-authenticated" style="display:hidden;"></div>
+        {% endif %}
 
     </section>
 
