Installed angularJS-module ui.router. Delete category: get partial and insert value in it

--- a/src/Mkox/SolmikBundle/Resources/public/partials/categoryDelete.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/categoryDelete.html
@@ -1,6 +1,6 @@
-<form action="/solmik/category/delete?id=1" method="post">
+<form>
     <div>
-        <input type="hidden" name="id" value="1" />
+        <input type="hidden" name="id" value="{{category.id}}" />
         <input type="submit" name="del" value="Yes" />
         <input type="submit" name="del" value="No" />
     </div>
