--- a/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
@@ -107,113 +107,115 @@
                 {#- <a href="/solmik/category/create">Add new Category</a>#}
                 - <a ng-click="formNewCategory()" href="">Add new Category</a>
             </span>
-            <div ng-show="showFormNewCategory" ng-include="path.categoryNew"></div>
-        </p>
-        <table class="table" id="solmi-strings" ng-repeat="category in stringsInCategories | orderBy:'name'">
-            <tr>
-                <td>{% verbatim %}{{ category.name}}{% endverbatim %}
+        <div ng-show="showFormNewCategory" ng-include="path.categoryNew"></div>
+    </p>
+    <div class="table" id="solmi-strings" ng-repeat="category in stringsInCategories | orderBy:'name'">
+        <div class="cat-and-strings cat-and-strings-{% verbatim %}{{ category.id}}{% endverbatim %}">
+            <div class="category">{% verbatim %}{{ category.name}}{% endverbatim %}
+                <span ng-show="loggedin">
+                    <a href="/solmik/category/edit?id={% verbatim %}{{ category.id}}{% endverbatim %}">Edit</a>
+                    -
+                    <a href="" ng-click="formDeleteCategory($event, category)">Delete</a>
+                    {#<a href="" ui-sref="/category/delete/{% verbatim %}{{ category.id}}{% endverbatim %}">Delete</a>#}
+                    {#<a href="" ui-sref="categoryDelete({% verbatim %}{cid: {{ category.id}}}{% endverbatim %})">Delete</a>#}
+                    -
+                    <a href="/solmik/string/create?category_id={% verbatim %}{{ category.id}}{% endverbatim %}">Add string</a>
+                </span>
+            </div>
+        
+            <div class="solmistrings">
+                <ul ng-repeat="solmistring in category.solmistrings">
+                    <form name="solmik_solmistring_for_list" method="post" action="" class="solmistring-form-for-list">
+                        <div id="solmik_solmistring_for_list">
+                            <div>
+                                <button type="button" id="solmik_solmistring_for_list_save" name="solmik_solmistring_for_list[save]" class="go">Go</button>
+                            </div>
+                            <div>
+                                <select name="solmik_solmistring_for_list[soundKey]" id="solmik_solmistring_for_list_soundKey" 
+                                        class="sound-keys"
+                                        ng-options="option.name for option in soundKeysArray track by option.name"
+                                        get-sound-key ng-model="solmistring.soundKey"
+                                        >
+                                </select>
+                            </div>
+                            <div>
+                                {#<select  id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
+                                         ng-model="solmistring.baseScale" ng-options="n for n in [] | range:1:9">
+                                </select>#}
+                                <input type="number" name="input" ng-model="solmistring.baseScale"
+                                       min="1" max="9" required
+                                       id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
+                                       >
+                            </div>
+                            <div>
+                                <input type="text" id="solmik_solmistring_for_list_string" name="solmik_solmistring_for_list[string]" required="required" value="{% verbatim %}{{ solmistring.string}}{% endverbatim %}" />
+                            </div>
+                            <input type="hidden" id="solmik_solmistring_for_list__token" name="solmik_solmistring_for_list[_token]" value="EjVHBUxlpaV5usl1fMtk0NlFqb7R_FEIzKOWOS_22ko" />
+                        </div>
+                    </form>
                     <span ng-show="loggedin">
-                        <a href="/solmik/category/edit?id={% verbatim %}{{ category.id}}{% endverbatim %}">Edit</a>
+                        <a href="/solmik/string/edit?id={% verbatim %}{{ solmistring.id}}{% endverbatim %}">Edit</a>
                         -
-                        <a href="/solmik/category/delete?id={% verbatim %}{{ category.id}}{% endverbatim %}">Delete</a>
-                        -
-                        <a href="/solmik/string/create?category_id={% verbatim %}{{ category.id}}{% endverbatim %}">Add string</a>
+                        <a href="/solmik/string/delete?id={% verbatim %}{{ solmistring.id}}{% endverbatim %}">Delete</a>
+                        - 
                     </span>
+                    {% verbatim %}{{ solmistring.name}}{% endverbatim %}
+                </ul>
+            </div>
+        </div>
+    </div>
+    {#<div ui-view></div>#}
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <div id="solmik-authenticated" style="display:hidden;"></div>
+    {% endif %}
+
+</section>
+
+
+<section id="categories">
+    <p class="categories-top">
+        <strong>Categories</strong>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            - <a href="{{ path('solmik-category-create') }}">Add new Category</a>
+        {% endif %}
+    </p>
+    <table class="table" id="solmi-strings">
+        {% for cKey, category in categories %}
+            <tr>
+                <td>{{ category.getName() }}
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a href="{{ path('solmik-category-edit', {'id' : category.getId()}) }}">Edit</a> - 
+                        <a href="{{ path('solmik-category-delete', {'id' : category.getId()}) }}">Delete</a> - 
+                        <a href="{{ path('solmik-string-create', {'category_id' : category.getId()}) }}">Add string</a>
+                    {% endif %}
                 </td>
             </tr>
             <tr>
                 <td>
-                    <ul ng-repeat="solmistring in category.solmistrings">
-                        <form name="solmik_solmistring_for_list" method="post" action="" class="solmistring-form-for-list">
-                            <div id="solmik_solmistring_for_list">
-                                <div>
-                                    <button type="button" id="solmik_solmistring_for_list_save" name="solmik_solmistring_for_list[save]" class="go">Go</button>
-                                </div>
-                                <div>
-                                    <select name="solmik_solmistring_for_list[soundKey]" id="solmik_solmistring_for_list_soundKey" 
-                                            class="sound-keys"
-                                            ng-options="option.name for option in soundKeysArray track by option.name"
-                                            get-sound-key ng-model="solmistring.soundKey"
-                                            >
-                                    </select>
-                                </div>
-                                <div>
-                                    {#<select  id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
-                                             ng-model="solmistring.baseScale" ng-options="n for n in [] | range:1:9">
-                                    </select>#}
-                                    <input type="number" name="input" ng-model="solmistring.baseScale"
-                                           min="1" max="9" required
-                                           id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
-                                           >
-                                </div>
-                                <div>
-                                    <input type="text" id="solmik_solmistring_for_list_string" name="solmik_solmistring_for_list[string]" required="required" value="{% verbatim %}{{ solmistring.string}}{% endverbatim %}" />
-                                </div>
-                                <input type="hidden" id="solmik_solmistring_for_list__token" name="solmik_solmistring_for_list[_token]" value="EjVHBUxlpaV5usl1fMtk0NlFqb7R_FEIzKOWOS_22ko" />
-                            </div>
-                        </form>
-                        <span ng-show="loggedin">
-                            <a href="/solmik/string/edit?id={% verbatim %}{{ solmistring.id}}{% endverbatim %}">Edit</a>
-                            -
-                            <a href="/solmik/string/delete?id={% verbatim %}{{ solmistring.id}}{% endverbatim %}">Delete</a>
-                            - 
-                        </span>
-                        {% verbatim %}{{ solmistring.name}}{% endverbatim %}
-                    </ul>
+                    {% if stringForms[cKey] %}
+                        <ul>
+                            {% set solmistrings = category.getSolmistrings() %}
+                            {% for sF in stringForms[cKey] %}
+                                {% set j = loop.index0 %}
+                                <li>
+                                    {% set stringForm = stringForms[cKey][j] %}
+
+                                    {{ form_start(stringForm, { 'attr': { 'class': 'solmistring-form-for-list' }}) }}
+                                    {{ form_widget(stringForm) }}
+                                    {{ form_end(stringForm) }}
+                                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                        <a href="{{ path('solmik-string-edit', {'id' : solmistrings[j].getId()}) }}">Edit</a> - 
+                                        <a href="{{ path('solmik-string-delete', {'id' : solmistrings[j].getId()}) }}">Delete</a>
+                                        - 
+                                    {% endif %}
+                                    {{ solmistrings[j].getName() }}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
                 </td>
             </tr>
-        </table>
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <div id="solmik-authenticated" style="display:hidden;"></div>
-        {% endif %}
-
-    </section>
-
-
-    <section id="categories">
-        <p class="categories-top">
-            <strong>Categories</strong>
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                - <a href="{{ path('solmik-category-create') }}">Add new Category</a>
-            {% endif %}
-        </p>
-        <table class="table" id="solmi-strings">
-            {% for cKey, category in categories %}
-                <tr>
-                    <td>{{ category.getName() }}
-                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                            <a href="{{ path('solmik-category-edit', {'id' : category.getId()}) }}">Edit</a> - 
-                            <a href="{{ path('solmik-category-delete', {'id' : category.getId()}) }}">Delete</a> - 
-                            <a href="{{ path('solmik-string-create', {'category_id' : category.getId()}) }}">Add string</a>
-                        {% endif %}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {% if stringForms[cKey] %}
-                            <ul>
-                                {% set solmistrings = category.getSolmistrings() %}
-                                {% for sF in stringForms[cKey] %}
-                                    {% set j = loop.index0 %}
-                                    <li>
-                                        {% set stringForm = stringForms[cKey][j] %}
-
-                                        {{ form_start(stringForm, { 'attr': { 'class': 'solmistring-form-for-list' }}) }}
-                                        {{ form_widget(stringForm) }}
-                                        {{ form_end(stringForm) }}
-                                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                                            <a href="{{ path('solmik-string-edit', {'id' : solmistrings[j].getId()}) }}">Edit</a> - 
-                                            <a href="{{ path('solmik-string-delete', {'id' : solmistrings[j].getId()}) }}">Delete</a>
-                                            - 
-                                        {% endif %}
-                                        {{ solmistrings[j].getName() }}
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
-    </section>
+        {% endfor %}
+    </table>
+</section>
 {% endblock %}
