delete category through angularJS form

--- a/src/Mkox/SolmikBundle/Resources/public/partials/categoryDelete.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/categoryDelete.html
@@ -1,7 +1,7 @@
-<form>
-    <div>
+<form class="delete-category">
+    <div>Delete category: 
         <input type="hidden" name="id" value="{{category.id}}" />
-        <input type="submit" name="del" value="Yes" />
-        <input type="submit" name="del" value="No" />
+        <input type="submit" ng-click="deleteCategory($event, category.id)" name="del" value="Yes" />
+        <input type="submit" ng-click="deleteCategory($event, category.id)" name="del" value="No" />
     </div>
 </form>
