--- a/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
@@ -156,7 +156,7 @@
                     <span ng-show="loggedin">
                         <a href="" ng-click="formEditString($event, solmistring)">Edit</a>
                         -
-                        <a href="/solmik/string/delete?id={% verbatim %}{{ solmistring.id}}{% endverbatim %}">Delete</a>
+                        <a href="" ng-click="formDeleteString($event, solmistring)">Delete</a>
                         - 
                     </span>
                     {% verbatim %}{{ solmistring.name}}{% endverbatim %}
