only 1 angularJS form for new/edit/delete is open at a time

--- a/src/Mkox/SolmikBundle/Resources/public/partials/categoryDelete.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/categoryDelete.html
@@ -1,4 +1,4 @@
-<form class="delete-category">
+<form class="delete-category remove-open-form">
     <div>Delete category: 
         <input type="hidden" name="id" value="{{category.id}}" />
         <input type="submit" ng-click="deleteCategory($event, category.id)" name="del" value="Yes" />
