--- a/src/Mkox/SolmikBundle/Resources/public/partials/categoryEdit.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/categoryEdit.html
@@ -1,5 +1,5 @@
 
-<form class="edit-category" ng-submit="editCategory($event, category)" name="solmik_category" >
+<form class="edit-category remove-open-form" ng-submit="editCategory($event, category)" name="solmik_category" >
     <div id="solmik_category">
         <div>                
             <label for="solmik_category_name" class="required">Name</label>
