--- a/src/Mkox/SolmikBundle/Resources/public/partials/stringEdit.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/stringEdit.html
@@ -1,4 +1,4 @@
-<form class="edit-string" ng-submit="saveEditString($event)" name="solmik_solmistring" method="post" action="">
+<form class="edit-string remove-open-form" ng-submit="saveEditString($event)" name="solmik_solmistring" method="post" action="">
     <div id="solmik_solmistring">
         Edit String:
         <div>                
