--- a/src/Mkox/SolmikBundle/Resources/public/partials/stringNew.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/stringNew.html
@@ -1,4 +1,4 @@
-<form class="new-string" ng-submit="saveNewString($event, category)" name="solmik_solmistring" method="post" action="">
+<form class="new-string remove-open-form" ng-submit="saveNewString($event, category)" name="solmik_solmistring" method="post" action="">
     <div id="solmik_solmistring">
         New String:
         <div>                
