--- a/src/Mkox/SolmikBundle/Resources/public/partials/stringDelete.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/stringDelete.html
@@ -1,4 +1,4 @@
-<form class="delete-string">
+<form class="delete-string remove-open-form">
     <div>Delete solmization string: 
         <input type="hidden" name="id" value="{{string.id}}" />
         <input type="submit" ng-click="deleteString($event, string.id)" name="del" value="Yes" />
