--- a/src/Mkox/SolmikBundle/Resources/public/css/main.css
+++ b/src/Mkox/SolmikBundle/Resources/public/css/main.css
@@ -154,6 +154,9 @@ form#random {
     margin-top: 10px;
 }
 */
+.solmistring input.scales {
+    max-width: 2em;
+}
 @media (min-width: 700px) {
     #solmi-config {
         float: left;
